<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#4863A0">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/welcomeText"
        android:id="@+id/welcome"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:textAlignment="center"
        android:textSize="30dp"
        android:fontFamily="sans-serif-smallcaps"
        android:textColor="#CFECEC"/>




    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/email"
        android:width="320dp"
        android:layout_below="@+id/welcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:hint="Enter Username"/>


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password"
        android:layout_below="@+id/email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:width="320dp"
        android:hint="Password"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginButton"
        android:id="@+id/loginBtn"
        android:layout_marginTop="42dp"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:theme="@style/AlertDialog.AppCompat"
        android:width="320dp"

        />



    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"
        android:id="@+id/rememberMe"
        android:layout_below="@+id/password"
        android:layout_marginRight="44dp"
        android:layout_marginEnd="44dp"
        android:checked="true" />


</RelativeLayout>
